--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -83,6 +83,7 @@ header > #buttons {
     position: absolute;
     display: flex;
     flex-direction: column;
+    top: 60px;
 }
 
 #mainDiv > .errorDiv {
