It doesn't look good (yet), but I think we can display items with similar names already in the library alongside items with same names

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -67,6 +67,14 @@
 							<LibraryItem MediaRow="@mediaRow"/>
 						}
 					}
+					
+					@if (libFilesWithSimilarName.ContainsKey(importFiles[i].originalFilename))
+                    {
+						foreach (C.MediaRow mediaRow in libFilesWithSimilarName[importFiles[i].originalFilename])
+                    	{
+                    		<LibraryItem MediaRow="@mediaRow"/>
+                    	}
+                    }
 				</div>
 			}
 			else if (libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
@@ -77,6 +85,14 @@
 					{
 						<LibraryItem MediaRow="@mediaRow"/>
 					}
+					
+					@if (libFilesWithSimilarName.ContainsKey(importFiles[i].originalFilename))
+                    {
+                    	foreach (C.MediaRow mediaRow in libFilesWithSimilarName[importFiles[i].originalFilename])
+                        {
+                            <LibraryItem MediaRow="@mediaRow"/>
+                        }
+                    }
 				</div>
 			}
 			else
