Warning items now have yellow shortPaths and tweak styling of error/warn divs

--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -86,7 +86,13 @@ header > #buttons {
     top: 60px;
 }
 
-#mainDiv > .errorDiv {
-    border-radius: 4px;
-    border-bottom: 2px solid red;
+#mainDiv > .itemGroup {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#mainDiv > .itemGroup > .errorDiv {
+}
+
+#mainDiv > .itemGroup > .warnDiv {
 }
