--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -7,7 +7,8 @@
 <div class="importItem">
 	<span class="material-icons-outlined checkbox @(Import.selectedItems.Contains(ImportFile.uuid) ? "checked" : "unchecked")" @onclick="@CheckClicked">check_circle</span>
 	<img src=@(ImportFile.thumbnail == null ? $"pss_import/{ImportFile.shortPath}" : $"data:image/jpg;base64,{ImportFile.thumbnail}") onclick="window.open('pss_import/@ImportFile.shortPath', '_blank').focus();" alt="" loading="lazy"/>
-	<span class="shortPath" onclick="openEdit(@Index)">@("Import" + ImportFile.shortPath)</span>
+	<span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")" onclick="openEdit(@Index)">@("Import" + ImportFile.shortPath)</span>
+
 	<input type="text" @bind="@ImportFile.renamedFilename" style="display: none" id="text @Index">
 	<button class="iconBtn" id="save @Index" @onclick="@FilenameChanged" style="display: none"><span class="material-icons-outlined">save</span></button>
 	<button class="iconBtn" id="close @Index" onclick="closeEdit(@Index)" style="display: none"><span class="material-icons-outlined">close</span></button>
