--- a/PSS/PSS/wwwroot/css/components/ImportItem.css
+++ b/PSS/PSS/wwwroot/css/components/ImportItem.css
@@ -41,15 +41,19 @@
     opacity: 1;
 }
 
-.importItem > .shortPath {
+.importItem > .shortWidth {
     max-width: 180px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.importItem > .shortPath:hover {
+.importItem > .shortWidth:hover {
     max-width: initial;
+    width: auto;
+}
+
+.libraryItem > .fullWidth {
     width: auto;
 }
 
