LibraryItem can now display if an item is in the Trash

--- a/PSS/PSS/Shared/LibraryItem.razor
+++ b/PSS/PSS/Shared/LibraryItem.razor
@@ -6,6 +6,7 @@
 	<img src=@(MediaRow.thumbnail == null ? $"pss_library/{MediaRow.path}" : $"data:image/jpg;base64,{MediaRow.thumbnail}") onclick="window.open('pss_library/@MediaRow.path', '_blank').focus();" alt="" loading="lazy"/>
 	<span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")">@("Library/" + MediaRow.path)</span>
 	<span class="dateTaken">@(MediaRow.dateTaken == null ? "No Date Taken" : MediaRow.dateTaken)</span>
+	<span class="inTrash">@(MediaRow.dateDeleted != null ? "In Trash" : "")</span>
 </div>
 
 @code{
