--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -69,7 +69,7 @@
 						{
 							foreach (C.MediaRow mediaRow in libFilesWithSameName[importFiles[i].originalFilename])
 							{
-								<LibraryItem MediaRow="@mediaRow"/>
+								<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
 							}
 						}
 					</div>
@@ -78,7 +78,7 @@
 	                    {
 							foreach (C.MediaRow mediaRow in libFilesWithSimilarName[importFiles[i].originalFilename])
                     		{
-                    			<LibraryItem MediaRow="@mediaRow"/>
+                    			<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
                     		}
 	                    }
 					</div>
@@ -105,7 +105,7 @@
 
 							foreach (C.MediaRow mediaRow in libFilesWithSameName[importFiles[i].originalFilename])
 							{
-								<LibraryItem MediaRow="@mediaRow"/>
+								<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
 							}
 						}
 					</div>
@@ -119,7 +119,7 @@
 							
 							foreach (C.MediaRow mediaRow in libFilesWithSimilarName[importFiles[i].originalFilename])
 							{
-								<LibraryItem MediaRow="@mediaRow"/>
+								<LibraryItem MediaRow="@mediaRow" Rerender="@StateHasChanged"/>
 							}
 						}
 					</div>
