Replace all List<Guid> throughout the project with HashSet<Guid>
God I hope this doesn't break anything cuz i didn't test it.

--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -71,7 +71,7 @@
     public Guid SelectedItem { get; set; } = Guid.Empty;
     
     [Parameter]
-    public List<Guid> SelectedItems { get; set; } //Passed in from the page. Items selected by user.
+    public HashSet<Guid> SelectedItems { get; set; } //Passed in from the page. Items selected by user.
     
     [Parameter]
     public EventCallback<int> SelectedItemsCountChanged { get; set; } //Used for clearing SelectedItems. https://blazor-university.com/components/two-way-binding/
