ImportItem can display if it's starred

--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -90,6 +90,11 @@
 			}
 		</div>
 	}
+	
+	@if (ImportFile.starred)
+	{
+		<span class="material-icons-outlined star-icon">star</span>
+	}
 </div>
 
 @code {
