Add CtrlS to KeyboardShortcuts

--- a/PSS/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/PSS/Shared/KeyboardShortcuts.razor
@@ -24,6 +24,9 @@
 
 	[Parameter]
 	public Action CtrlA { get; set; }
+	
+	[Parameter]
+	public Action CtrlS { get; set; }
 
 	[Parameter]
 	public Action CtrlD { get; set; }
@@ -73,6 +76,7 @@
 		if (Left != null) HotKeysContext.Add(ModKeys.None, Keys.Left, Left);
 		if (Right != null) HotKeysContext.Add(ModKeys.None, Keys.Right, Right);
 		if (CtrlA != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.A, CtrlA);
+		if (CtrlS != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.S, CtrlS);
 		if (CtrlD != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.D, CtrlD);
 		if (CtrlE != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.E, CtrlE);
 		if (CtrlG != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.G, CtrlG);
