--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -42,6 +42,11 @@ header > #statsDiv > #errorAmount {
     color: red;
 }
 
+header > #addBtn {
+    position: absolute;
+    left: 350px;
+}
+
 header > #search {
     background-color: black;
     border: 1px solid white;
