--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -1,6 +1,7 @@
 @page "/"
 @using Microsoft.VisualBasic.FileIO
 @using CS = PSS.Shared.CollectionSelector;
+@using static ImportFile
 @using System.Text
 
 <title>Import - PSS</title>
@@ -271,6 +272,48 @@
 		C.Close();
 	}
 
+	///Adds either all items or the selected items to your library.
+	private async void AddItems()
+	{
+		List<ImportFile> filesToAdd;
+		if (selectedItems.Count > 0)
+		{
+			filesToAdd = importFiles.Where(file => selectedItems.Contains(file.uuid)).ToList();
+			importFiles.RemoveAll(file => selectedItems.Contains(file.uuid));
+			ClearChecks();
+		}
+		else
+		{
+			filesToAdd = importFiles;
+		}
+		
+		await Parallel.ForEachAsync(filesToAdd, async (file, _) =>
+		{
+			DateTime? dtToUse = file.dateTakenSource switch
+			{
+				DateTakenSource.Metadata => file.metadataDateTaken,
+				DateTakenSource.Filename => file.filenameDateTaken,
+				DateTakenSource.Custom => file.customDateTaken,
+				DateTakenSource.None => null,
+				_ => throw new ArgumentOutOfRangeException()
+			};
+
+			await C.InsertMedia(file.shortPath, dtToUse, file.uuid, file.thumbnail, file.starred);
+
+			string destFolder = C.CreateFullDateFolderPath(dtToUse);
+			Directory.CreateDirectory(destFolder);
+			string destPath = C.CreateFullPath(dtToUse, file.originalFilename + file.extension);
+			File.Move(file.absolutePath, destPath);
+
+			if (file.collections != null)
+				foreach (C.Collection collection in file.collections)
+					C.AddToCollection(file.uuid, collection.id);
+		});
+		
+		OrganizeItems();
+		StateHasChanged();
+	}
+
 	private static void SearchItems()
 	{
 		searchResults.Clear();
@@ -340,7 +383,7 @@
 	{
 		foreach (ImportFile file in importFiles.Where(file => selectedItems.Contains(file.uuid)).ToList())
 		{
-			file.dateTakenSource = ImportFile.DateTakenSource.Custom;
+			file.dateTakenSource = DateTakenSource.Custom;
 			file.customDateTaken = null;
 		}
 	}
