--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -4,7 +4,7 @@
 
 <link href="css/components/ImportItem.css" rel="stylesheet">
 
-<div class="importItem">
+<div class="importItem" @onclick="@(mouseArgs => { if (mouseArgs.CtrlKey) CheckClicked(mouseArgs); })">
 	<span class="material-icons-outlined checkbox @(Import.selectedItems.Contains(ImportFile.uuid) ? "checked" : "unchecked")" @onclick="@CheckClicked">check_circle</span>
 	<img src=@(ImportFile.thumbnail == null ? $"pss_import/{ImportFile.shortPath}" : $"data:image/jpg;base64,{ImportFile.thumbnail}") onclick="window.open('pss_import/@ImportFile.shortPath', '_blank').focus();" alt="" loading="lazy"/>
 	<span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")" onclick="openEdit(@Index)">Import/@ImportFile.shortPath</span>
