Now when loading from disk, if a file doesn't exist, it will no longer add it to the List<>

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -444,7 +444,11 @@
 		importFiles.Clear();
 		StateHasChanged(); //IDK why but this is necessary otherwise the code below doesn't work.
 		foreach (string line in lines)
-			importFiles.Add(ParseTabDelimitedString(line));
+		{
+			ImportFile newFile = ParseTabDelimitedString(line);
+			if (newFile.uuid != Guid.Empty)
+				importFiles.Add(newFile);
+		}
 		OrganizeItems();
 		statusMessage = "";
 		StateHasChanged();
